crates/tui/tests/snapshots/tui_e2e__empty_app.snap
---
source: crates/tui/tests/tui_e2e.rs
assertion_line: 762
expression: output
---
"┌ mac-app-init ────────┐┌ Install ─────────────────────────────────────────────┐"
"│ 인입                 ││                                                      │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│   📋 도메인 현황     ││  `mai` 바이너리를 찾을 수 없거나 사용 가능한 도메인이│" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (45, " "), (47, " "), (50, " "), (53, " "), (55, " "), (57, " "), (60, " "), (62, " "), (65, " "), (67, " "), (69, " "), (72, " "), (74, " "), (76, " "), (78, " ")]
"│                      ││                                                      │"
"│                      ││  터미널에서:  mai available                          │" Hidden by multi-width symbols: [(28, " "), (30, " "), (32, " "), (34, " "), (36, " ")]
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      │└──────────────────────────────────────────────────────┘"
"│                      │┌ 설치 / 상태 ─────────────────────────────────────────┐" Hidden by multi-width symbols: [(27, " "), (29, " "), (34, " "), (36, " ")]
"│                      ││Enter/Space: 설치 또는 제거                           │" Hidden by multi-width symbols: [(39, " "), (41, " "), (44, " "), (46, " "), (49, " "), (51, " ")]
"│                      ││r: 새로고침                                           │" Hidden by multi-width symbols: [(29, " "), (31, " "), (33, " "), (35, " ")]
"│                      ││                                                      │"
"│                      ││카드: enabled 0 / disabled 0                          │" Hidden by multi-width symbols: [(26, " "), (28, " ")]
"│                      ││카드 없음                                             │" Hidden by multi-width symbols: [(26, " "), (28, " "), (31, " "), (33, " ")]
"│                      ││                                                      │"
"└──────────────────────┘└──────────────────────────────────────────────────────┘"
"↑↓ 이동 │ Enter/→ 선택 │ r 새로고침 │ Esc 종료                                  " Hidden by multi-width symbols: [(4, " "), (6, " "), (19, " "), (21, " "), (28, " "), (30, " "), (32, " "), (34, " "), (43, " "), (45, " ")]
