crates/tui/tests/snapshots/tui_e2e__initial_sidebar.snap
---
source: crates/tui/tests/tui_e2e.rs
assertion_line: 401
expression: output
---
"┌ mac-app-init ────────┐┌ 도메인 현황 — 14/14 설치됨 ──────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(27, " "), (29, " "), (31, " "), (34, " "), (36, " "), (47, " "), (49, " "), (51, " ")]
"│ 인입                 ││ ✓ 사용      mount         마운트 2개                                                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (29, " "), (31, " "), (53, " "), (55, " "), (57, " "), (61, " ")]
"│   📋 도메인 현황     ││ ✓ 사용      env           카드 3개                                                           │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " "), (29, " "), (31, " "), (53, " "), (55, " "), (59, " ")]
"│   🚀 의존성 설치     ││ ✓ 사용      host          항상 활성                                                          │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " "), (29, " "), (31, " "), (53, " "), (55, " "), (58, " "), (60, " ")]
"│ 인프라               ││ ✓ 사용      cron          3개 활성                                                           │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (29, " "), (31, " "), (54, " "), (57, " "), (59, " ")]
"│   💾 마운트          ││ ○ 미사용     files         꺼짐                                                              │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (29, " "), (31, " "), (33, " "), (54, " "), (56, " ")]
"│   🔑 서비스 카드     ││ ✓ 사용      sd-backup     자동백업 켜짐                                                      │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (15, " "), (17, " "), (29, " "), (31, " "), (53, " "), (55, " "), (57, " "), (59, " "), (62, " "), (64, " ")]
"│   🖥 시스템 상태      ││ ✓ 사용      git           프로필: test                                                       │" Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (14, " "), (16, " "), (29, " "), (31, " "), (53, " "), (55, " "), (57, " ")]
"│ 자동화               ││ ✓ 사용      vscode        VS Code 사용 가능                                                  │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (29, " "), (31, " "), (61, " "), (63, " "), (66, " "), (68, " ")]
"│   ⏰ 크론(스케줄)    ││ ○ 미사용     container     미설치                                                            │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (13, " "), (15, " "), (17, " "), (29, " "), (31, " "), (33, " "), (54, " "), (56, " "), (58, " ")]
"│   📁 파일정리        ││ ✓ 사용      keyboard      F18 적용됨                                                         │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (14, " "), (29, " "), (31, " "), (57, " "), (59, " "), (61, " ")]
"│   📸 SD 미디어 백업  ││ ✓ 사용      shell         PATH 5개, alias 2개                                                │" Hidden by multi-width symbols: [(5, " "), (11, " "), (13, " "), (15, " "), (18, " "), (20, " "), (29, " "), (31, " "), (59, " "), (70, " ")]
"│ 개발                 ││ ✓ 사용      wireguard     2개 활성                                                           │" Hidden by multi-width symbols: [(3, " "), (5, " "), (29, " "), (31, " "), (54, " "), (57, " "), (59, " ")]
"│   🔱 Git 설정        ││ ✓ 사용      bootstrap     7/7 설치됨                                                         │" Hidden by multi-width symbols: [(5, " "), (12, " "), (14, " "), (29, " "), (31, " "), (57, " "), (59, " "), (61, " ")]
"│   💻 VSCode          ││ ✓ 사용      quickaction   3개 설치                                                           │" Hidden by multi-width symbols: [(5, " "), (29, " "), (31, " "), (54, " "), (57, " "), (59, " ")]
"│   📦 컨테이너        ││                                                                                              │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (14, " ")]
"│ Finder               ││                                                                                              │"
"│   ⚡ 빠른동작        ││                                                                                              │" Hidden by multi-width symbols: [(5, " "), (8, " "), (10, " "), (12, " "), (14, " ")]
"│ 시스템               ││                                                                                              │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│   ⌨ 키보드 재매핑    ││                                                                                              │" Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (14, " "), (16, " "), (18, " ")]
"│   🐚 PATH+Alias      │└──────────────────────────────────────────────────────────────────────────────────────────────┘" Hidden by multi-width symbols: [(5, " ")]
"│   🔒 VPN             │┌ 설치 / 상태 ─────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(5, " "), (27, " "), (29, " "), (34, " "), (36, " ")]
"│                      ││Enter/Space: 설치 또는 제거                                                                   │" Hidden by multi-width symbols: [(39, " "), (41, " "), (44, " "), (46, " "), (49, " "), (51, " ")]
"│                      ││r: 새로고침                                                                                   │" Hidden by multi-width symbols: [(29, " "), (31, " "), (33, " "), (35, " ")]
"│                      ││                                                                                              │"
"│                      ││현재 설치/삭제 결과와 진단 메시지가 여기에 표시됩니다.                                        │" Hidden by multi-width symbols: [(26, " "), (28, " "), (31, " "), (33, " "), (36, " "), (38, " "), (41, " "), (43, " "), (45, " "), (48, " "), (50, " "), (53, " "), (55, " "), (57, " "), (59, " "), (62, " "), (64, " "), (66, " "), (69, " "), (71, " "), (73, " "), (75, " "), (77, " ")]
"│                      ││                                                                                              │"
"│                      ││                                                                                              │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────┘"
"↑↓ 이동 │ Enter/→ 선택 │ r 새로고침 │ Esc 종료                                                                          " Hidden by multi-width symbols: [(4, " "), (6, " "), (19, " "), (21, " "), (28, " "), (30, " "), (32, " "), (34, " "), (43, " "), (45, " ")]
